# keepbook

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_CONFIG_ROUTING.org  IMPLEMENTATION_CRYPTO_FX_SOURCES.org  IMPLEMENTATION_EQUITY_SOURCES.org  IMPLEMENTATION_MARKET_DATA.org  IMPLEMENTATION_SOURCE_ROUTING.org  OPEN_QUESTIONS.org  README.org  build.rs  flake.nix  justfile  keepbook.toml
.github/workflows/: ci.yml  frontend-build-apk.yml  release-app-artifacts.yml
agents/keepbook-data/: AGENTS.md  install  project-guide.md
contracts/: README.md  cases.json  list_accounts_single.json  list_balances_cost_basis.json  list_balances_single_eur_reporting_usd.json  list_balances_single_usd.json  list_connections_single.json  list_transactions_ignores_annotation_tag.json  portfolio_change_points_empty_range.json  portfolio_history_empty_range.json  portfolio_snapshot_empty.json  spending_end_bound_monthly_alignment.json
crates/keepbook-dioxus/: Cargo.toml  Dioxus.toml  README.md
crates/keepbook-dioxus/assets/: styles.css
crates/keepbook-dioxus/src/: api.rs  logic.rs  main.rs  tests.rs  tray.rs  views.rs
crates/keepbook-dioxus/src/views/: accounts.rs  charts.rs  connections.rs  graph_settings.rs  proposed_edits.rs  shared.rs  spending.rs
crates/keepbook-ffi/: Cargo.toml
crates/keepbook-ffi/src/: lib.rs
crates/keepbook-server/: Cargo.toml
crates/keepbook-server/src/: ai_rules.rs  lib.rs  main.rs
docs/plans/: 2026-02-01-sync-price-integration-design.md  2026-02-01-sync-price-integration.md  2026-02-01-synchronizer-cli-design.md  2026-02-02-portfolio-command-design.md  2026-02-02-portfolio-command-implementation.md  2026-02-02-staleness-refresh-config.md  2026-02-02-staleness-refresh-impl.md  2026-02-03-balance-snapshot.md  2026-02-03-symlink-directories-design.md  2026-02-03-symlink-directories-impl.md  2026-02-03-xdg-data-directory-design.md  2026-02-11-typescript-port.md  2026-02-23-transaction-date-range.md  2026-02-24-frontend-charts-impl.md  2026-02-24-frontend-charts-redesign.md
examples/: chase_browser_poc.rs  coinbase.rs  eodhd_test.rs  marketstack_test.rs  plaid.rs  schwab.rs
frontend/: .envrc  .gitignore  README.md  app.json  flake.nix  justfile  metro.config.js  package.json  tsconfig.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/app/(tabs)/: _layout.tsx  accounts.tsx  index.tsx  settings.tsx  spending.tsx  two.tsx
frontend/components/: ExternalLink.tsx
frontend/components/charts/: ChartContainer.tsx  NetWorthChart.skia.tsx  NetWorthChart.tsx  NetWorthChart.types.ts  NetWorthChart.web.tsx  SkiaChartFallback.tsx  SpendingChart.skia.tsx  SpendingChart.tsx  SpendingChart.types.ts  SpendingChart.web.tsx  TimeRangeSelector.tsx  chart-colors.ts  chart-ticks.ts
frontend/modules/keepbook-native/: expo-module.config.json  index.ts
plans/: abstraction-sweep.md  chase-transaction-sync.md
scripts/: check-mirror-edits.sh  schwab-headless-auth.mjs
src/: app.rs  clock.rs  config.rs  duration.rs  format.rs  git.rs  lib.rs  main.rs  staleness.rs
src/app/: config.rs  graph.rs  ignore_rules.rs  import.rs  list.rs  mod.rs  mutations.rs  portfolio.rs  preflight.rs  spending.rs  sync.rs  transaction_rules.rs  types.rs  value.rs
src/credentials/: age.rs  config.rs  env.rs  field_entry.rs  mod.rs  pass.rs  session.rs
src/market_data/: asset_id.rs  builder.rs  jsonl_store.rs  mod.rs  models.rs  provider.rs  registry.rs  service.rs  source_config.rs  sources.rs  store.rs  valuation.rs
src/market_data/providers/: alpha_vantage.rs  coincap.rs  coingecko.rs  cryptocompare.rs  eodhd.rs  frankfurter.rs  marketstack.rs  mod.rs  twelve_data.rs
src/models/: account.rs  asset.rs  balance.rs  connection.rs  id.rs  id_generator.rs  mod.rs  proposed_transaction_edit.rs  transaction.rs  transaction_annotation.rs
src/portfolio/: change_points.rs  mod.rs  models.rs  service.rs
src/storage/: json_file.rs  lookup.rs  memory.rs  mod.rs
src/sync/: coinbase.rs  factory.rs  mod.rs  orchestrator.rs  prices.rs  schwab.rs  service.rs
src/sync/chase/: api.rs  mod.rs  qfx.rs
src/sync/synchronizers/: chase.rs  coinbase.rs  mod.rs  plaid.rs  schwab.rs
src/tui/: mod.rs
tests/: coinbase_transaction_dedupe.rs  coinbase_unsafe_account_uuid.rs  coinbase_wiremock.rs  coingecko_live.rs  coingecko_wiremock.rs  connection_state_invalid_ids.rs  contracts.rs  frankfurter_live.rs  frankfurter_wiremock.rs  id_path_traversal.rs  json_storage_account_config.rs  json_storage_skips_invalid_entries.rs  json_storage_skips_unsafe_dirs.rs  list_balances_edge.rs  list_connections_edge.rs  list_connections_status.rs  market_data_idempotent_store_price.rs  market_data_mock.rs  mock_sync_auto_commit.rs  portfolio_integration.rs  portfolio_offline_quotes.rs  price_history_edge_cases.rs  price_refresh_counts.rs  remove_connection_edge.rs  schwab_wiremock.rs  staleness_integration.rs  storage_id_mismatch.rs  store_sync_prices.rs  symlink_case_collisions.rs  symlink_edge.rs  sync_orchestrator_clock.rs  sync_service_auth.rs  sync_storage_integration.rs  transactions_dedupe_on_read.rs
tests/support/: mod.rs
ts/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
ts/src/: clock.test.ts  clock.ts  config.test.ts  config.ts  decimal.ts  duration.test.ts  duration.ts  git.test.ts  git.ts  index.ts  staleness.test.ts  staleness.ts
ts/src/app/: config.test.ts  config.ts  format.test.ts  format.ts  graph.test.ts  graph.ts  ignore-rules.ts  import.ts  integration.test.ts  list.test.ts  list.ts  mutations.test.ts  mutations.ts  portfolio.test.ts  portfolio.ts  preflight.ts  spending.test.ts  spending.ts  sync.test.ts  sync.ts  transaction-rules.test.ts  transaction-rules.ts  types.ts  value.ts
ts/src/cli/: main.ts  version.test.ts  version.ts
ts/src/credentials/: age.ts  credential-config.test.ts  credential-config.ts  credential-store.ts  env.ts  index.ts  pass.test.ts  pass.ts  session.ts
ts/src/format/: decimal.test.ts  decimal.ts
ts/src/market-data/: asset-id.test.ts  asset-id.ts  jsonl-store.test.ts  jsonl-store.ts  models.ts  (+7 more)
(+67 files in other folders)
