[package]
name = "keepbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "keepbook"
path = "src/lib.rs"

[[bin]]
name = "keepbook"
path = "src/main.rs"

[[example]]
name = "plaid"
path = "examples/plaid.rs"

[[example]]
name = "eodhd_test"
path = "examples/eodhd_test.rs"

[[example]]
name = "chase_browser_poc"
path = "examples/chase_browser_poc.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# JWT for Coinbase CDP API auth
jsonwebtoken = "9"

# Crypto for EC key handling
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"

# Base64 encoding
base64 = "0.22"
sha2 = "0.10"
rust_decimal = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# For reading pass credentials
secrecy = "0.10"

# For finding cache/config directories
dirs = "6"

# Async trait support
async-trait = "0.1"

# Chrome DevTools Protocol for browser automation
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
