[package]
name = "keepbook"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/keepbook-ffi",
]

[lib]
name = "keepbook"
path = "src/lib.rs"

[[bin]]
name = "keepbook"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "keepbook-sync-daemon"
path = "src/bin/keepbook-sync-daemon.rs"
required-features = ["cli", "tray"]

[[example]]
name = "plaid"
path = "examples/plaid.rs"
required-features = ["cli"]

[[example]]
name = "eodhd_test"
path = "examples/eodhd_test.rs"
required-features = ["cli"]

[[example]]
name = "chase_browser_poc"
path = "examples/chase_browser_poc.rs"
required-features = ["cli"]

[features]
# Default keeps existing CLI behavior. Consumers (mobile/web) can disable default
# features to build only the library parts they need.
default = ["cli"]

# Enables all modules used by the CLI app.
cli = [
  "app",
  "config",
  "credentials",
  "git",
  "market_data",
  "portfolio",
  "staleness",
  "sync",
  "tui",
  "dep:clap",
  "dep:tracing-subscriber",
]

# Fine-grained feature gates for consumers that want a subset.
app = []
tui = ["dep:dialoguer"]
config = []
credentials = []
git = []
market_data = ["dep:reqwest"]
portfolio = []
staleness = []
sync = [
  "dep:reqwest",
  "dep:base64",
  "dep:chromiumoxide",
  "dep:futures",
  "dep:p256",
  "dep:rand",
  "dep:tempfile",
  "dep:urlencoding",
]
tray = ["dep:ksni", "dep:image"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "brotli"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# UUIDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Crypto for EC key handling
p256 = { version = "0.13", features = ["ecdsa", "pem"], optional = true }
rand = { version = "0.8", optional = true }

# Base64 encoding
base64 = { version = "0.22", optional = true }
rust_decimal = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }

# For reading pass credentials
secrecy = "0.10"

# For finding cache/config directories
dirs = "6"

# Async trait support
async-trait = "0.1"

# Chrome DevTools Protocol for browser automation
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
futures = { version = "0.3", optional = true }
tempfile = { version = "3", optional = true }
urlencoding = { version = "2", optional = true }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
ksni = { version = "0.3", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[dev-dependencies]
wiremock = "0.6"
