[package]
name = "keepbook-dioxus"
version = "0.1.0"
edition = "2021"
description = "Dioxus client for keepbook"
license = "MIT OR Apache-2.0"

[[bin]]
name = "keepbook-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.3", features = ["web"] }
gloo-net = { version = "0.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
