[package]
name = "keepbook-dioxus"
version = "0.1.0"
edition = "2021"
description = "Dioxus client for keepbook"
license = "MIT OR Apache-2.0"

[[bin]]
name = "keepbook-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.3", default-features = false, features = ["launch", "lib"] }
gloo-net = { version = "0.6", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["web"]
web = ["dioxus/web", "dep:gloo-net"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.85"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "=0.4.58"
web-sys = "=0.3.85"
