[package]
name = "keepbook-dioxus"
version = "0.2.2"
edition = "2021"
description = "Dioxus client for keepbook"
license = "MIT OR Apache-2.0"

[[bin]]
name = "keepbook-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.3", default-features = false, features = ["launch", "lib"] }
gloo-net = { version = "0.6", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[features]
default = ["web"]
web = ["dioxus/web", "dep:gloo-net"]
desktop = ["dioxus/desktop", "dep:image"]
mobile = ["dioxus/mobile"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keepbook-server = { path = "../keepbook-server", default-features = false }
serde_urlencoded = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.85"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "=0.4.58"
web-sys = "=0.3.85"
