[package]
name = "keepbook-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "keepbook_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Consume the keepbook library without its default (CLI) feature set.
keepbook = { path = "../..", default-features = false, features = ["credentials"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt", "macros"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "ssh"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
