[package]
name = "keepbook-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for keepbook clients"
license = "MIT OR Apache-2.0"

[lib]
name = "keepbook_server"
path = "src/lib.rs"

[[bin]]
name = "keepbook-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
keepbook = { path = "../..", default-features = false, features = [
  "app",
  "config",
  "credentials",
  "git",
  "market_data",
  "portfolio",
  "staleness",
  "sync",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
